(03/15/2008)

*** The WeightedHost scheduler now has a lower bound (of -10)
    on scoring to reduce the effect of penalising a host in the case of a
    large number of transient errors. Previously, a large number of
    transient errors would push the score so low that the score would
    take far too long to return to a more appropriate value.

(02/22/2008)

*** Added sys:dateFormat(pattern, value)

(02/12/2008)

*** Added the maxSubmissionTime parameter to the score scheduler.
    It's not strictly enforced, but the submission time of a job
    submission task is now part of the feedback loop. The submission
    time contributes to the score linearly and in addition to the other
    things (such as successFactor). If the submission time
    is 0.5s, the contribution is 0. If the submission time of a job
    is exactly maxSubmissionTime, then the contribution is 
    -successFactor.

(02/11/2008)

*** Added some code to store stack frames of less than 5 elements
    in a less memory consuming structure that HashMap.

(10/03/2007)

*** Converted more things to use the CWD below

(09/19/2007)

*** Added hostCount argument to task:execute. This means that, in
    general, count should be understood to mean "process count"
    
*** Added batch argument to task:execute. It allows for 
    "fire and forget" jobs.

(09/13/2007)

*** Added a fixed rate submit queue. It can be enabled by specifying
    the maxSubmitRate property for a host. The value is a floating
    point number. So if you wanted at most one job submitted every
    ten seconds, the rate would be 0.1.

(09/06/2007)

*** Partial ability to have a CWD for each separate execution, 
    if done from the same JVM.

(08/28/2007)

*** "off" is now a valid value for throttling parameters

(08/23/2007)

*** Added task:availableHandlers(*type). In case people don't
    have to manually add handlers.

(08/22/2007)

*** failOnJobError=false would not make task:execute() return 